avoid marking columns that only have a desired width empty, what would exclude them from space redistribution, bug 194024,  r=jkeiser sr=bzbarsky