layout/tables/BasicTableLayoutStrategy.cpp
@@ -270,8 +270,9 @@ BasicTableLayoutStrategy::BalanceColumnWidths(nsIPresContext*          aPresCont
     nscoord colMinWidth = colFrame->GetMinWidth();
     mTableFrame->SetColumnWidth(colX, colMinWidth);
     minTableWidth += colMinWidth;
-    if ((colFrame->GetMinWidth() > 0) || (colFrame->GetFixWidth() > 0) ||
-        (colFrame->GetPctWidth() > 0) || (colFrame->GetWidth(MIN_PRO) > 0)) {
+    if ((colFrame->GetMinWidth() > 0) || (colFrame->GetDesWidth() > 0) ||
+        (colFrame->GetFixWidth() > 0) || (colFrame->GetPctWidth() > 0) || 
+        (colFrame->GetWidth(MIN_PRO) > 0)) {
       numNonZeroWidthCols++;
     }
     if (mTableFrame->GetNumCellsOriginatingInCol(colX) > 0) {
